--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -46,7 +46,11 @@
 }
 
 .fa-angle-right::before {
-  content: "\f105"
+  content: "\f105";
+}
+
+.fa-angle-left::before {
+  content: "\f104";
 }
 
 .fa-angle-up::before {
