--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -1,3 +1,37 @@
+
+.body-dealer-locator [hidden] {
+    display: none
+}
+
+
+.body-dealer-locator button,
+.body-dealer-locator input {
+    font-size: inherit;
+    font-family: inherit;
+    line-height: inherit
+}
+
+.body-dealer-locator ul>li {
+    margin-bottom: 0
+}
+
+.body-dealer-locator ul {
+    margin-top: 0
+}
+
+
+.body-dealer-locator ul {
+    margin-bottom: 24px
+}
+
+.body-dealer-locator ul>li {
+    position: relative
+}
+
+
+
+
+
 .body-dealer-locator,.dealer-locator,.dealer-locator #map,.dealer-locator .partsasist-form .regForm #select-form #eloquaForm .row {
     overflow: hidden
 }
