--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -1,6 +1,7 @@
 
 .body-dealer-locator {
     font-size: 16px;
+    font-family: VolvoNovumRegular,sans-serif,sans-serif;
 }
 
 .body-dealer-locator [hidden] {
