--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -1,43 +1,39 @@
 
-.body-dealer-locator {
+.dealer-locator {
     font-size: 16px;
     font-family: VolvoNovumRegular,sans-serif,sans-serif;
 }
 
-.body-dealer-locator [hidden] {
+.dealer-locator [hidden] {
     display: none
 }
 
 
-.body-dealer-locator button,
-.body-dealer-locator input {
+.dealer-locator button,
+.dealer-locator input {
     font-size: inherit;
     font-family: inherit;
     line-height: inherit
 }
 
-.body-dealer-locator ul>li {
+.dealer-locator ul>li {
     margin-bottom: 0
 }
 
-.body-dealer-locator ul {
+.dealer-locator ul {
     margin-top: 0
 }
 
-
-.body-dealer-locator ul {
+.dealer-locator ul {
     margin-bottom: 24px
 }
 
-.body-dealer-locator ul>li {
+.dealer-locator ul>li {
     position: relative
 }
 
 
-
-
-
-.body-dealer-locator,.dealer-locator,.dealer-locator #map,.dealer-locator .partsasist-form .regForm #select-form #eloquaForm .row {
+.dealer-locator,.dealer-locator,.dealer-locator #map,.dealer-locator .partsasist-form .regForm #select-form #eloquaForm .row {
     overflow: hidden
 }
 
