--- a/styles/styles.css
+++ b/styles/styles.css
@@ -347,4 +347,6 @@ main .section.highlight {
   background-color: var(--highlight-background-color);
 }
 
-
+body.disable-scroll {
+  overflow: hidden;
+}
