--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -1,5 +1,7 @@
 /* below the fold CSS goes here */
 
+@import url("/common/modal/modal.css");
+
 @font-face {
   font-family: VolvoNovum;
   src: url('/fonts/volvonovum-regular.woff') format('woff');
