--- a/styles/styles.css
+++ b/styles/styles.css
@@ -219,7 +219,7 @@ a.button.primary, button.primary {
 }
 
 a.button.primary:hover, button.primary:hover {
-  background-color: rgba(255, 255, 255, 80%);
+  background-color: rgb(255 255 255 / 80%);
 }
 
 .hero a.button.primary:hover, .hero button.primary:hover {
