fix: link target in footer and missing scroll to top

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,29 +1,25 @@
-footer * {
-  box-sizing: border-box;
-}
-
 .footer-wrapper {
   padding-left: 15px;
   padding-right: 15px;
   margin: 48px auto 0;
 }
 
-.footer-wrapper p, .footer-wrapper ul {
+.block.footer p, .block.footer ul {
   font-family: var(--ff-volvo-novum);
   font-size: 14px;
   margin: 0;
 }
 
-.footer-wrapper .footer-links {
+.block.footer .footer-links {
   margin: 0 -15px;
   background-color: #000;
 }
 
-.footer-wrapper .footer-links ul {
+.block.footer .footer-links ul {
   text-align: center;
 }
 
-.footer-wrapper .footer-links ul li {
+.block.footer .footer-links ul li {
   margin: 8px 0;
   padding: 0 12px;
   display: inline-block;
@@ -31,22 +27,36 @@ footer * {
   border-right: 1px solid #fff;
 }
 
-.footer-wrapper .footer-links ul li:last-child {
+.block.footer .footer-links ul li:last-child {
   border-right: none;
 }
 
-.footer-wrapper .footer-links ul li a {
+.block.footer .footer-links ul li a {
   text-decoration: none;
   color: #fff;
 }
 
-.footer-wrapper .footer-copyright {
+.block.footer .footer-copyright {
   margin: 0 -15px;
   padding: 32px 0;
   text-align: center;
 }
 
-.footer-wrapper .footer-copyright p {
+.block.footer .footer-copyright p {
   margin: 0;
   color: #A7A8A9;
+}
+
+.block.footer .scroll-to-top {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  background-color: var(--volvo-text-gray);
+  color: var(--background-color);
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 8px 24px;
 }
