feat: open youtube links in modal (#60)
* #27 - add youtube links to run in modal
* #27 - Fix css when video modal is open
* #27 - Replace css import with franklin loadCss
* #27 - Removing vide on modal close
* #27 - Handle video links for teaser grid
* #27 - Fix
* #27 - Using css vars
* #27 - Move video helpers to script file
* #27 - Fix browser history update
* #27 - Fix unnecessary history records update
* #27 - Add comment

---------

Co-authored-by: Dirk Rudolph <drudolph@adobe.com>

--- a/blocks/teaser-grid/teaser-grid.css
+++ b/blocks/teaser-grid/teaser-grid.css
@@ -83,6 +83,13 @@
     color: white;
 }
 
+.block.teaser-grid>ul>li .link-with-video .video-icon-wrapper {
+    top: 50%;
+    left: 50%;
+    color: var(--volvo-text-gray);
+    pointer-events: inherit;
+}
+
 @media screen and (min-width: 992px) {
     .block.teaser-grid {
         --grid-row-gap: 10px;
