--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -128,6 +128,9 @@
   display: none;
 }
 
+.block.teaser-cards .link-with-video p.image {
+  display: block;
+}
 
 @media (min-width: 768px) {
   .block.teaser-cards {
@@ -161,7 +164,7 @@
     background: none;
     color: white;
   }
-  
+
   .block.teaser-cards.teaser-cards-1 h2,
   .block.teaser-cards.teaser-cards-1 h3,
   .block.teaser-cards.teaser-cards-1 p.text {
