feat: press releases overview

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,7 @@
   --link-color: #004FBC;
   --link-hover-color: #0b326f;
   --background-color: #fff;
+  --background-hover-color: #E1DFDD;
   --background-light-gray: #ebebeb;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
